--- a/src/components/addToCartModal/addToCartModal.css
+++ b/src/components/addToCartModal/addToCartModal.css
@@ -1,13 +1,15 @@
 .backdrop {
     position: fixed;
+    margin-top: 73px;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 500px;
     z-index: 90;
-    background: rgba(0, 0, 0, 0.016);
+    background: rgba(0, 0, 0, 0.33);
   }
   
   .modal {
     background-color: #EAE5DF;
+    ;
   }
