TailwindCSS 3.0 and Gatsby Img Component

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,10 +1,10 @@
 body {
   font-family: "Raleway";
   font-weight: 600;
-  color: #3C2516;
+  color: #3c2516;
 }
 .bottomborder {
-  border-bottom: 1px solid #E6C6D1;
+  border-bottom: 1px solid #e6c6d1;
 }
 .size {
   height: 820px;
